--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 	<h1>Chat testing</h1>
 
 
-	<script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5a0c83edb846a25b0111d0e4",r("https://s3.amazonaws.com/collectchat/launcher.js")}(window,document);</script>
-</body>
+<!--	<script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5a0c83edb846a25b0111d0e4",r("https://s3.amazonaws.com/collectchat/launcher.js")}(window,document);</script>
+-->
+	<!-- Start of BotEngine (www.botengine.ai) code -->
+<script type="text/javascript">
+    window.__be = window.__be || {};
+    window.__be.id = "5a0e9aeaca00fc0007225e8f";
+    (function() {
+        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.botengine.ai/widget/plugin.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+    })();
+</script>
+<!-- End of BotEngine code -->
+        
+	</body>
 </html>
 
